# beam

./: flake.nix  stack-8.10.yaml
beam-core/: beam-core.cabal
beam-core/Database/Beam/: Query.hs
beam-core/Database/Beam/Backend/: SQL.hs
beam-core/Database/Beam/Backend/SQL/: AST.hs  BeamExtensions.hs  Builder.hs  Row.hs  SQL2003.hs  SQL92.hs  SQL99.hs
beam-core/Database/Beam/Query/: Adhoc.hs  CTE.hs  Combinators.hs  CustomSQL.hs  Extra.hs  Internal.hs  SQL92.hs
beam-core/Database/Beam/Schema/: Lenses.hs  Tables.hs
beam-core/test/Database/Beam/Test/: SQL.hs
beam-migrate/: beam-migrate.cabal
beam-migrate/Database/Beam/Migrate/: Checks.hs  Serialization.hs  Types.hs
beam-migrate/Database/Beam/Migrate/Generics/: Tables.hs
beam-migrate/Database/Beam/Migrate/SQL/: Tables.hs
beam-migrate/Database/Beam/Migrate/Types/: CheckedEntities.hs  Predicates.hs
beam-postgres/: beam-postgres.cabal
beam-postgres/Database/Beam/: Postgres.hs
beam-postgres/Database/Beam/Postgres/: Connection.hs  CustomTypes.hs  Full.hs  Migrate.hs  PgSpecific.hs  Syntax.hs  Types.hs
beam-sqlite/: beam-sqlite.cabal
beam-sqlite/Database/Beam/Sqlite/: Connection.hs  Syntax.hs
nix/: overlay.nix  sources.yaml
