name:                 beam-postgres
version:              0.5.3.1
synopsis:             Connection layer between beam and postgres
description:          Beam driver for <https://www.postgresql.org/ PostgreSQL>, an advanced open-source RDBMS
homepage:             https://haskell-beam.github.io/beam/user-guide/backends/beam-postgres
license:              MIT
license-file:         LICENSE
author:               Travis Athougies
maintainer:           travis@athougies.net
category:             Database
build-type:           Simple
cabal-version:        1.18
extra-doc-files:      ChangeLog.md
bug-reports:          https://github.com/haskell-beam/beam/issues

library
  exposed-modules:    Database.Beam.Postgres
                      Database.Beam.Postgres.Migrate
                      Database.Beam.Postgres.Syntax
                      Database.Beam.Postgres.CustomTypes

                      Database.Beam.Postgres.Conduit
                      Database.Beam.Postgres.Full

                      Database.Beam.Postgres.PgCrypto
                      Database.Beam.Postgres.Extensions.UuidOssp

  other-modules:      Database.Beam.Postgres.Connection
                      Database.Beam.Postgres.Debug
                      Database.Beam.Postgres.Extensions
                      Database.Beam.Postgres.Extensions.Internal
                      Database.Beam.Postgres.PgSpecific
                      Database.Beam.Postgres.Types

  build-depends:      base                 ,
                      beam-core            ,
                      beam-migrate         ,

                      postgresql-libpq     ,
                      postgresql-simple    ,

                      text                 ,
                      bytestring           ,

                      attoparsec           ,
                      hashable             ,
                      lifted-base          ,
                      free                 ,
                      time                 ,
                      monad-control        ,
                      mtl                  ,
                      conduit              ,
                      aeson                ,
                      uuid-types           ,
                      case-insensitive     ,
                      scientific           ,
                      vector               ,
                      network-uri          ,
                      unordered-containers ,
                      tagged               ,
                      haskell-src-exts     ,
                      transformers-base    ,
                      clock                ,
                      ghc-prim
  default-language:   Haskell2010
  default-extensions: ScopedTypeVariables, OverloadedStrings, MultiParamTypeClasses, RankNTypes, FlexibleInstances,
                      DeriveDataTypeable, DeriveGeneric, StandaloneDeriving, TypeFamilies, GADTs, OverloadedStrings,
                      CPP, TypeApplications, FlexibleContexts
  ghc-options:        -Wall
  if flag(werror)
    ghc-options: -Werror

test-suite beam-postgres-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: Database.Beam.Postgres.Test,
                 Database.Beam.Postgres.Test.Marshal,
                 Database.Beam.Postgres.Test.Select,
                 Database.Beam.Postgres.Test.DataTypes,
                 Database.Beam.Postgres.Test.Migrate
  build-depends:
    aeson,
    base,
    beam-core,
    beam-migrate,
    beam-postgres,
    bytestring,
    hedgehog,
    postgresql-simple,
    tasty-hunit,
    tasty,
    text,
    tmp-postgres,
    uuid,
    vector
  default-language: Haskell2010
  default-extensions: OverloadedStrings, FlexibleInstances, FlexibleContexts, TypeFamilies,
                      ScopedTypeVariables, MultiParamTypeClasses, TypeApplications, DeriveGeneric,
                      DeriveAnyClass, RankNTypes

flag werror
  description: Enable -Werror during development
  default:     False
  manual:      True

source-repository head
  type: git
  location: https://github.com/haskell-beam/beam.git
  subdir: beam-postgres
